--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,29 @@
-@font-face {
-  font-family:"Montserrat" ;
-  src: url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans:wght@300;400;500;600;700;800family=DM+Serif+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+:root{
+  --background-color: #0D0C13;
+  --font-color: #E6E5EF;
+  --primary-color: #aeadcc;
+  --secondary-color: #623d50;
+  --accent-color: #a26a71;
+  --primary-text: 'Albert Sans';
+  --secondary-text: 'Poppins';
 }
 
-*{
+body{ 
   padding: 0;
   margin: 0 ;
+  box-sizing: border-box;
 }
+
+
 /* 
-  background-color: #272727;
-  color: #9DE0FD #blue
-  color: #E03C39 #red
-  font-family: 'Montserrat', sans-serif;
+  background-color: #0D0C13;
+  color text : #E6E5EF
+  Primary Color: #aeadcc
+  Secondary Color: #623d50
+  Accent: #623d50
   font-family: 'DM Serif Display', serif;
-font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 */
