--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -4,37 +4,22 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url("../src/assets/img/bg.svg");
-  background-repeat: repeat;
-  background-attachment: fixed;
-  background-size: contain;
-}
-
-.aboutWrapper{
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  width: 1024px;
-  height: 100%;
+  background-color:  var(--background-color);
+  padding-top: 100px;
 }
 
 .aboutText{
-  background-color: rgb(223, 223, 223);
-  width: 80%;
   display: flex;
-  padding-top: 80px;
   padding-bottom: 40px;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  border-radius: 0px;
-  border-left:10px solid #555555;
-  border-right: 10px solid #555555;
 }
 
 .aboutText h2{
-  font-size: 32px;
-  padding: 40px 0px;
+  color: var(--font-color);
+  font-family: var(--primary-text);
+  font-size: 48px;
 }
 
 .aboutText p{
@@ -44,4 +29,59 @@
   letter-spacing: 2px;
   text-wrap: pretty;
   padding-bottom: 40px;
+}
+
+.cardsContainer{
+  width: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.cards{
+    font-family: var(--secondary-text);
+    background-color: #18161E ;
+    border-radius: 10px;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    color: var(--font-color);
+    width: 30%;
+    height: 100%;
+    border: 1px solid black;
+    margin: 5px;
+}
+
+.cards img{
+  width: 64px;
+  padding: 10px;
+}
+
+.cards h3{
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.cards p{
+  font-size: 16px;
+}
+
+@media screen and (max-width:768px) {
+
+  .aboutText h2{
+    padding: 20px;
+  }
+
+  .cardsContainer{
+    flex-direction: column;
+  }
+
+  .cards{
+    text-align: center;
+    width: 90%;
+  }
+
 }
