--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,4 +1,3 @@
-/* NavBar.module.css */
 
 .navbar {
   position: fixed;
@@ -7,19 +6,22 @@
   height: 80px;
   justify-content: space-between;
   align-items: center;
-  background-color: #e2e2e2;
-  color: white;
+  background-color: var(--background-color);
+  border-bottom: 1px solid rgba(169, 169, 169, 0.171);
   z-index: 9999999;
 }
 
 .logo {
-  padding-left: 20px;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
   text-decoration: none;
   color: white;
   font-size: 1.5rem;
   font-weight: bold;
   width: 50%;
   text-align: left;
+  font-family: var(--primary-text);
 }
 
 .menu-icon {
@@ -28,41 +30,65 @@
   font-size: 1.5rem;
   width: 50%;
   text-align: end;
+  color:  var(--font-color);
 }
 
 .nav-links {
   display: flex;
+  align-items: center;
 }
 
 .nav-links a,
 .schedule-button {
   text-decoration: none;
-  color: black;
-  padding: 0px 20px;
+  margin-top: 10px;
+  padding: 10px 20px;
+  font-family: var(--secondary-text);
+  transition: .3s ease-in-out all;
+  color: rgba(211, 211, 211, 0.842);
 }
 
 .nav-links a:hover,
 .schedule-button:hover {
-  color: #777;
+  color: var(--font-color);
+  transition: .3s ease-in-out all;
 }
+
 
 .dropdown-menu {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   width: 100%;
   top: 80px;
   right: 0;
-  background-color: #333;
+  background-color: var(--background-color);
 }
 
 .dropdown-menu a,
 .dropdown-menu .schedule-button {
-  margin: 5px 0;
+  margin: 10px 0;
+  color: var(--font-color);
+  text-decoration: none;
+  cursor: pointer;
+  padding: 10px 30px;
 }
 
 .navbar button{
-  background-color: rgb(100, 100, 100);
-  margin: 0px 20px;
-  color: white;
+  margin-right: 20px;
+  padding: 10px 30px;
+  background-color: transparent;
+  cursor: pointer;
+  transition: .3s ease-in-out all;
+  border-radius: 7px;
+  background-color: transparent;
+  border: 1px solid #623D50;
+  color: var(--font-color);
+}
+
+.navbar button:hover{
+  transition: .3s ease-in-out all;
+  background-color: rgba(255, 255, 255, 0.414);
 }
