--- a/src/components/ServicesHero/ServicesHero.module.css
+++ b/src/components/ServicesHero/ServicesHero.module.css
@@ -4,39 +4,80 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url("../src/assets/img/bg.svg");
-  background-repeat: repeat;
-  background-attachment: fixed;
-  background-size: contain;
+  background-color:  var(--background-color);
+  padding: 100px 0px;
 }
 
 .servicesWrapper{
+  width: 70%;
   display: flex;
   align-items: center;
-  flex-direction: column;
-  width: 1024px;
-  height: 100%;
+  justify-content: space-around;
+  background-color: #18161E;
+  color: var(--font-color);
+  padding: 40px;
+  border-radius: 10px;
 }
 
 .servicesText{
-  background-color: rgb(223, 223, 223);
-  width: 80%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  border-radius: 0px;
-  border-left:10px solid #555555;
-  border-right: 10px solid #555555;
+  font-family: var(--primary-text);
 }
 
 .servicesText h2{
-  padding-bottom: 40px;
+  font-size: 32px;
 }
 
-.cardContainer{
+.servicesText p{
+  font-size: 16px;
+}
+
+.stepsContainer{
+  width: 60%;
   display: flex;
-  align-items: center;
-  justify-content: space-evenly;
   flex-wrap: wrap;
 }
+
+.steps{
+  margin: 10px;
+  padding: 30px;
+  display: flex;
+  align-items: center;
+  width: 40%;
+  font-family: var(--secondary-text);
+}
+
+.steps h3{
+  font-size: 32px;
+  padding: 10px;
+  margin-right: 10px;
+}
+
+.steps p{
+  font-size: 18px;
+}
+
+@media screen  and (max-width:768px){
+  .servicesWrapper{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .stepsContainer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .steps{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin: 0px;
+    padding: 0;
+  }
+}
+
