--- a/src/components/TherapyTipes/Therapy.module.css
+++ b/src/components/TherapyTipes/Therapy.module.css
@@ -4,68 +4,86 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url("../src/assets/img/bg.svg");
-  background-repeat: repeat;
-  background-attachment: fixed;
-  background-size: contain;
+  background-color:  var(--background-color);
+  padding-top: 100px;
 }
 
 .therapyTipesWrapper{
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 1024px;
+  width: 70%;
   height: 100%;
+  padding: 40px;
 }
 
-.therapyTipesText{
-  background-color: rgb(223, 223, 223);
-  width: 80%;
-  display: flex;
-  padding-bottom: 80px;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  border-radius: 0px;
-  border-left:10px solid #555555;
-  border-right: 10px solid #555555;
-}
-
-.therapyTipes{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.therapyTypes1{
   width: 100%;
-  height: 100%;
+  height: max-content;
+  display: flex;
 }
 
-.therapyTipesText h2{
-  padding: 40px 0px;
+.therapyTypes2{
+  display: flex;
+  height: max-content;
+  width: 100%;
+  height: auto;
 }
 
-.TypesContainer{
-  width: 50%;
+.terapyAdulto{
+  margin: 5px;
+  border-radius: 10px;
   text-align: center;
-}
-
-.TypesIMG{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.TypesContainer img{
+  background-color: var(--primary-color);
   width: 80%;
+  padding: 50px;
+  color: var(--font-color);
+  font-family: var(--primary-text);
 }
 
-.TypesTitle{
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.terapyPareja{
+  margin: 5px;
+  border-radius: 10px;
+  text-align: center;
+  width: 20%;
+  background-color: var(--secondary-color);
+  color: var(--font-color);
+  padding: 50px;
+  font-family: var(--primary-text);
+
 }
 
-.TypesContainer h3{
-  width: 50%;
-  padding: 20px 0px;
+.terapyAdolescente{
+  margin: 5px;
+  border-radius: 10px;
+  text-align: center;
+  width: 60%;
+  padding: 50px;
+  background-color: var(--font-color);
+  font-family: var(--primary-text);
+
+}
+
+.terapyIG{
+  margin: 5px;
+  border-radius: 10px;
+  text-align: center;
+  width: 40%;
+  background-color: var(--accent-color);
+  padding: 50px;
+  color: var(--font-color);
+  font-family: var(--secondary-text);
+}
+
+@media screen and (max-width:768px) {
+  .therapyTypes1, .therapyTypes2{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+  }
+
+  .terapyAdulto, .terapyPareja, .terapyAdolescente, .terapyIG{
+    width: 100%;
+  }
 }
