[Update] update Footer distribution and mobile version and footer logo

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -56,7 +56,6 @@
 
 
 .thirdCol{
-  padding: 20px;
   width: 33%;
   height: 100%;
   display: flex;
@@ -69,6 +68,7 @@
 
 .thirdCol p{
   margin: 0;
+  padding: 0;
 }
 
 @media screen and (max-width:768px) {
